--- a/style.css
+++ b/style.css
@@ -124,3 +124,19 @@
 .p2back {
   background-color: rgb(0, 140, 255);
 }
+
+.player1card {
+  border-radius: 10%;
+  border-color: rgb(255, 187, 0);
+  border-width: 0.2cm;
+  padding: 1cap;
+  background-color: rgb(255, 255, 255);
+}
+
+.player2card {
+  border-radius: 10%;
+  border-color: rgb(0, 140, 255);
+  border-width: 0.2cm;
+  padding: 1cap;
+  background-color: rgb(255, 255, 255);
+}
