--- a/style.css
+++ b/style.css
@@ -1,102 +1,276 @@
+/* Full table that contains all the other boxes inside*/
 .fullTable {
-  border-collapse: collapse;
-  border-spacing: 0;
+  background-color: #ffffff;
+  padding: 5px;
+  display: flex;
+  height: 93vh;
+  border-style: outset;
   border-color: rgb(0, 0, 0);
-  border-style: solid;
+  border-radius: 0.5cm;
   border-width: 5px;
-  font-family: Arial, sans-serif;
-  font-size: 14px;
-  overflow: hidden;
-  padding: 10px 5px;
-  word-break: normal;
 }
-.playTable {
+
+/* Game space contains the 5 columns of cards, buttons, and table*/
+.gameSpace {
+  box-sizing: border-box;
+  height: 100%;
+
+  margin-right: 5px;
+
+  flex: 4; /* Takes up 80% of the available space */
+  display: flex;
+  padding: 10px; /* Add padding to the gameSpace */
+
+  border-style: outset;
   border-color: rgb(0, 0, 0);
-  border-style: solid;
+  border-radius: 0.5cm;
   border-width: 5px;
-  font-family: Arial, sans-serif;
-  font-size: 14px;
-  font-weight: normal;
-  overflow: hidden;
-  padding: 50px 50px;
-  word-break: normal;
-  border-collapse: collapse;
-  width: 500px;
-  transform: scale(1);
 }
-.tableTittle {
+
+.gameSpace {
+  background: linear-gradient(270deg, #505050, #bbbbbb);
+  background-size: 400% 400%;
+
+  animation: AnimationName 10s ease infinite;
+}
+
+@keyframes AnimationName {
+  0% {
+    background-position: 0% 55%;
+  }
+  50% {
+    background-position: 100% 46%;
+  }
+  100% {
+    background-position: 0% 55%;
+  }
+}
+/* The 5 game spaces inside gameSpace*/
+
+.p1InfoBox,
+.playerOneTable,
+.playTable,
+.playerTwoTable,
+.p2InfoBox {
+  flex: 1;
+  height: 100%;
+  box-sizing: border-box;
+  border-style: outset;
   border-color: rgb(0, 0, 0);
-  border-style: solid;
+  border-radius: 0.5cm;
   border-width: 5px;
-  font-family: Arial, sans-serif;
-  font-size: 50px;
-  font-weight: normal;
-  overflow: hidden;
-  padding: 10px 5px;
-  word-break: normal;
-  border-collapse: collapse;
-  width: 500px;
-  height: 50px;
-  transform: scale(1);
+  justify-content: center;
+  /*margin: 10px; /*Adjust the margin to add spacing between boxes */
+  margin-right: 7px; /*Add padding to the color boxes */
+  margin-left: 7px;
+  display: flex;
+  /*all the repeted info*/
 }
+
+.p1InfoBox {
+  flex-direction: column;
+  flex: 0.75;
+}
+
 .playerOneTable {
-  border-color: rgb(0, 0, 0);
-  border-style: solid;
-  border-width: 5px;
+  align-items: center;
   background-color: rgb(190, 190, 190);
-  font-family: Arial, sans-serif;
-  font-size: 14px;
-  font-weight: normal;
-  overflow: hidden;
-  padding: 50px 50px;
-  word-break: normal;
-  border-collapse: collapse;
-  width: 100px;
-  transform: scale(1);
+  flex: 0.75;
+}
+
+.playTable {
+  flex: 1.5;
+  align-items: center;
+  background-image: url(/assets/cards/green.jpg);
+  background-size: cover;
 }
 
 .playerTwoTable {
-  border-color: rgb(0, 0, 0);
-  border-style: solid;
-  border-width: 5px;
+  align-items: center;
   background-color: rgb(190, 190, 190);
-  font-family: Arial, sans-serif;
-  font-size: 14px;
-  font-weight: normal;
-  overflow: hidden;
-  padding: 50px 50px;
-  word-break: normal;
-  border-collapse: collapse;
-  width: 100px;
-  transform: scale(1);
+  flex: 0.75;
 }
 
-.infoSlot {
+.p2InfoBox {
+  flex-direction: column;
+  flex: 0.75;
+}
+
+/* P1 and P1 cards container*/
+
+.centered-container {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr); /* Adjust the number of rows as needed */
+  grid-gap: 20px; /* Adjust the gap between buttons */
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  scale: 0.75;
+}
+
+/* Center Table */
+
+.card-grid {
+  display: flex;
+  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 10px; /* Adjust the gap between cards */
+  scale: 0.75;
+}
+
+.card-slot {
+  flex: 1;
+  box-sizing: border-box;
+  margin: 5px; /* Adjust the margin between card slots */
+  height: 100%;
+  padding: 10px;
+  border-radius: 0.7cm;
+  border: #d6d8db;
+}
+
+/* For */
+.rectangle {
+  background-color: rgb(241, 241, 241); /* Adjust the color of the rectangles */
+  padding: 10px;
+  margin: 0.1cm;
+
+  border-style: outset;
   border-color: rgb(0, 0, 0);
-  border-style: solid;
+  border-radius: 0.5cm;
   border-width: 5px;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
-  font-weight: normal;
-  overflow: hidden;
-  padding: 10px 5px;
-  word-break: normal;
-  border-collapse: collapse;
-  width: 200px;
-  transform: scale(1);
 }
 
-/* MOVEMENTS */
+.p1InfoBox {
+  background-color: rgb(184, 184, 184);
+}
+.p2InfoBox {
+  background-color: rgb(184, 184, 184);
+}
+
+.p1back,
+.p2back {
+  height: 15vh;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 0.8cm;
+}
+
+.p1back {
+  background-color: rgb(255, 174, 0);
+  border-color: rgb(204, 139, 0);
+}
+.p2back {
+  background-color: rgb(0, 106, 192);
+  border-color: rgb(0, 80, 146);
+}
+
+.p1win,
+.p2win {
+  height: auto;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 0.37cm;
+  border-style: solid;
+
+  border-radius: 0.2cm;
+  border-width: 5px;
+}
+
+.p1win {
+  background-color: rgb(255, 174, 0);
+  border-color: rgb(204, 139, 0);
+}
+.p2win {
+  background-color: rgb(0, 106, 192);
+  border-color: rgb(0, 80, 146);
+}
+
+.infoSlotP1,
+.infoSlotP2 {
+  height: 100vh;
+  display: grid;
+  grid-template-rows: repeat(9, 1fr); /* Adjust the number of rows as needed */
+  grid-gap: 10px; /* Adjust the gap between buttons */
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: x-large;
+}
+
+.pointsP1,
+.pointsP2,
+.scoreEnvido1,
+.scoreEnvido2 {
+  height: 20vh;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 1.1cm;
+}
+
+.btn {
+  width: 150px;
+  height: 40px;
+  border-radius: 0.5cm;
+}
+/*cambiar esto a las 2 playerard2*/
+.cardBtn {
+  background-color: rgb(255, 255, 255);
+  border-style: outset;
+  border-color: rgb(0, 0, 0);
+  border-radius: 0.5cm;
+  border-width: 5px;
+  height: 37vh;
+  width: 25vh;
+}
+
+.player1card {
+  border-color: rgb(255, 174, 0);
+}
+.player2card {
+  border-color: rgb(0, 106, 192);
+}
+
+/* Movements contains the boxes for actions and match history*/
+
+.actions {
+  box-sizing: border-box;
+  height: 100%;
+  background-color: rgb(255, 246, 206);
+  flex: 1; /* Takes up 20% of the available space */
+  border-style: outset;
+  border-color: rgb(0, 0, 0);
+  border-radius: 0.5cm;
+  border-width: 5px;
+}
+
+.matchActions,
+.roundActions {
+  height: 4.5vh;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 0.8cm;
+}
+.games,
 .movements {
-  width: 400px;
-  height: 500px;
+  height: 34vh;
   border: 1px solid #ccc;
   overflow-y: auto; /* Enable vertical scrollbar when needed */
+  /**/
+  border-style: outset;
+  border-color: rgb(0, 0, 0);
+  border-radius: 0.5cm;
+  border-width: 5px;
 }
 
 .movements__row {
   padding: 10px;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 3px solid #ddd;
 }
 
 .smallImage {
@@ -104,41 +278,7 @@
   height: auto; /* This ensures the aspect ratio is maintained */
 }
 
-.games {
-  width: 400px;
-  height: 500px;
-  border: 1px solid #ccc;
-  overflow-y: auto; /* Enable vertical scrollbar when needed */
-}
-
 .games__row {
   padding: 10px;
-  border-bottom: 1px solid #dddddd;
-  background-color: aqua;
-}
-
-.p1back {
-  background-color: rgb(255, 187, 0);
-}
-
-.p2back {
-  background-color: rgb(0, 140, 255);
-}
-
-.player1card {
-  border-radius: 10%;
-  border-color: rgb(255, 187, 0);
-  border-width: 0.2cm;
-  padding: 1cap;
-  margin: 1cap;
-  background-color: rgb(255, 255, 255);
-}
-
-.player2card {
-  border-radius: 10%;
-  border-color: rgb(0, 140, 255);
-  border-width: 0.2cm;
-  padding: 1cap;
-  margin: 1cap;
-  background-color: rgb(255, 255, 255);
+  margin-bottom: 0.1cm;
 }
